<resources>
    <string name="app_name">My App</string>
    <string name="title_activity_main_composable">MainActivityComposable</string>
    <string name="again_click_me">Hit My Head, Again</string>
    <string name="todo">TODO</string>
    <string name="enter_account_name">Enter account name</string>
    <string name="enter_your_balance">Enter your balance</string>
    <string name="enter_your_account_number">Enter your Account Number</string>
    <string name="enter_type">Enter type</string>
    <string name="dialog_message">Enter type</string>
    <string name="savings">Savings</string>
    <string name="checking">Checking</string>
    <string name="account_name">Account Name</string>
    <string name="account_number">Account Number</string>
    <string name="account_type">Account Type</string>
    <string name="total_balance">Total Balance</string>
    <string name="interest_rate">Interest Rate</string>
    <string name="service_charge">Service Charge</string>
    <string name="deposit">Deposit</string>
    <string name="withdraw">Withdraw</string>
    <string name="start_the_game">Start The Game</string>
</resources>