<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".bank.BankingActivity">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_alignParentTop="true"
        android:background="@color/white"
        android:orientation="vertical"
        tools:ignore="UselessParent">

        <com.google.android.material.textfield.TextInputLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            >

            <com.google.android.material.textfield.TextInputEditText
                android:id="@+id/nameET"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:autofillHints="true"
                android:hint="@string/enter_account_name"
                android:inputType="text"
                android:padding="15dp"
                android:textAlignment="gravity"
                android:textColorHint="#757575" />
        </com.google.android.material.textfield.TextInputLayout>

        <com.google.android.material.textfield.TextInputLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            >

            <com.google.android.material.textfield.TextInputEditText
                android:id="@+id/balanceET"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:autofillHints="true"
                android:hint="@string/enter_your_balance"
                android:inputType="numberDecimal"
                android:padding="15dp"
                android:textAlignment="gravity"
                android:textColorHint="#757575"
                tools:ignore="ExtraText" />
        </com.google.android.material.textfield.TextInputLayout>

        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:background="@color/gray"
            android:elevation="5dp"
            android:padding="15dp"
            android:text="@string/enter_type"
            android:textAlignment="center"
            android:textColor="@color/black"
            android:textSize="20sp">
        </TextView>

        <RadioGroup
            android:id="@+id/typeGroup"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:orientation="vertical">

            <RadioButton
                android:id="@+id/savingRB"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:minHeight="48dp"
                android:text="@string/savings">
            </RadioButton>

            <RadioButton
                android:id="@+id/checkingRB"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:checked="true"
                android:minHeight="48dp"
                android:text="@string/checking">
            </RadioButton>

        </RadioGroup>

    </LinearLayout>

    <com.google.android.material.floatingactionbutton.FloatingActionButton
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentEnd="true"
        android:layout_alignParentBottom="true"
        android:layout_margin="10dp"
        android:contentDescription="@string/todo"
        android:src="@drawable/ic_save_floating_button"
        app:fabSize="normal"
        android:onClick="openNewAccount"
        tools:ignore="UsingOnClickInXml">
    </com.google.android.material.floatingactionbutton.FloatingActionButton>

</RelativeLayout>